# platify-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-check.yml
src/: lib.rs
tests/: integration.rs
