[package]
name = "platify"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Streamline cross-platform Rust development with declarative attribute macros."
repository = "https://github.com/mematthias/platify-rs"
readme = true
rust-version = "1.68.0"

[lib]
proc-macro = true

[features]
default = ["warn-platform-struct-usage"]
warn-platform-struct-usage = []

[dev-dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt"] }

[dependencies]
proc-macro2 = { version = "1.0.103", default-features = false, features = [] }
quote = { version = "1.0.42", default-features = false, features = [] }
syn = { version = "2.0.111", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }
